Name:		MSSMScan
Version:	0.5.0.0
Synopsis:	Common Scan Interface for MSSM models
Description: 	Common Scan Interface for MSSM models such as mSUGRA, 
		Deflected Mirage Mediation et al. 
License: 	GPLv3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4, binary, transformers, split, bytestring, bytestring-lexing, containers,  parallel>2, deepseq, HStringTemplate, HStringTemplateHelpers, HROOT==0.1.2, ListLike, iteratee==0.3.6
Build-Type: 	Simple

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all

Exposed-Modules: 
		 MSSMScan,  
		 MSSMScan.Model,
		 MSSMScan.Model.MSUGRA,
		 MSSMScan.Model.DMM, 
		 MSSMScan.OutputPhys, 
		 MSSMScan.ParseUtil,
		 MSSMScan.Parse, 
		 MSSMScan.Print, 
		 MSSMScan.Read,
		 MSSMScan.Pattern
		 
