Name:		MSSMScan
Version:	0.5.1.1
Synopsis:	Common Scan Interface for MSSM models
Description: 	Common Scan Interface for MSSM models such as mSUGRA, 
		Deflected Mirage Mediation et al. 
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4, binary, transformers, split, bytestring, bytestring-lexing, containers,  parallel>2, deepseq, HStringTemplate, HStringTemplateHelpersIW , ListLike, iteratee, MSSMType
Build-Type: 	Simple

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all

Exposed-Modules: 
		 MSSMScan,  
		 MSSMScan.Model,
		 MSSMScan.Model.MSUGRA,
		 MSSMScan.Model.DMM, 
		 MSSMScan.ParseUtil,
		 MSSMScan.Parse, 
		 MSSMScan.Print, 
		 MSSMScan.Read,
		 MSSMScan.Pattern
		 
